fix: align env var in vite

--- a/src/tailwind/xds.css
+++ b/src/tailwind/xds.css
@@ -1,7 +1,8 @@
 @import '../../node_modules/@empathyco/x-design-system/dist/index.css';
 
 /* TODO - Review this. */
-@source './**/*.{js,jsx,ts,tsx,vue}';
+@source './**/*.{js,ts}';
+
 /*
 @layer components {
   .x-message {
